updates FileChooser